# linux-factory

./: .editorconfig  .envrc  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .readthedocs.yml  CHANGELOG.md  LICENSE  Makefile  Makefile.extra  Mkpmfile  README.md  _Makefile  a.txt  blackmagic.mk  config.mk  config.yaml  config.yml  dbinit.sh  dbtool.py  default.nix  deskterm.lua  example.env  extraoverride.pl  fonts.list  install.py  mkpm  mkpm.json  mkpm.mk  packages.list  project-words.txt  pyproject.toml  required.sh  uni.py  upstream.mk  util.mk  wizard.py  wizard.yml
.make/: envs
.mkpm/: -dotenv  -envcache  -gnu  -mkchain  -patch  -python  .bootstrap.mk  dotenv  envcache  gnu  mkchain  patch  python
apt-ftparchive/: apt-ftparchive-deb.conf  apt-ftparchive-extras.conf  apt-ftparchive-udeb.conf  release.conf
auto/: clean  config
config/: binary  bootstrap  build  common
doc/: changelog-archive.md  custom.md  gen_package_lists.py
env/: pip-selfcheck.json
installers/: aircrack.sh  android-studio.sh  angry-ip-scanner.sh  atom.py  audacity.sh  blender.sh  chrome.sh  deluge.sh  emacs.py  enpass.sh  freemat.sh  gimp.sh  google-cloud-sdk.sh  google-web-designer.sh  inkscape.sh  intellij.sh  john-the-ripper.sh  kazam.sh  lamp.py  lightworks.sh  lmms.sh  mongodb.sh  musescore.sh  mysql-workbench.sh  nodejs.py  ophcrack.sh  poedit.sh  private-internet-access.sh  pycharm.sh  robomongo.sh  rsa-key.sh  slack.sh  spotify.sh  synfig.sh  vagrant.sh  virtualbox.sh  wordpress.sh
lb/: .gitignore  Makefile  default.env  example.env  upstream.mk
os/: config.mk  (+3 more)
(+416 files in other folders)
