[tool.poetry]
name = "linux-factory"
version = "0.0.1"
description = "a framework used to create custom linux debian distributions"
authors = [""]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.9.6"
PyYAML = "^6.0"
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]
black = "^23.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
